modules/instances/internet_gateway.tf
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.dnd_vpc.id

  tags = {
    Name    = "Internet_Gateway_Production"
    Service = "Internet_Gateway"
    Iac     = "Terraform"
  }
}

resource "aws_route_table" "internet_gateway_route_table" {
  vpc_id = aws_vpc.dnd_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internet_gateway.id
  }

  tags = {
    Name    = "Internet_Gateway_Route_Table"
    Service = "internet_gateway_route_table"
    Iac     = "Terraform"
  }
}

resource "aws_route" "public_internet_access" {
  route_table_id         = aws_route_table.internet_gateway_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.internet_gateway.id
}
